--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="er_app_name">Exchange rates</string>
     <string name="swipeDeleteItemText">Delete</string>
     <string name="currentRatesMenuAddTitle">Add currency</string>
+    <string name="notification_channel_description">A channel which shows notifications about events at update currency rate</string>
+    <string name="chart_label_months_3">3 months</string>
+    <string name="chart_label_months_6">6 months</string>
+    <string name="chart_label_months_12">12 months</string>
 </resources>
